--- a/projetos/trabalho/tela-inicial.html
+++ b/projetos/trabalho/tela-inicial.html
@@ -11,16 +11,18 @@
         <h1>Ciclo do fósforo</h1>
    <p>
          O fósforo possui um ciclo <strong>Biogeoquímico</strong> , de extrema importância para a manutenção da vida no planeta. Os compostos de fósforo, como citado, são diversos e estão presentes por conta de diversas moléculas essenciais.
-   </p>
+         Diferentemente de outros ciclos biogeoquímicos, como o do carbono e do nitrogênio, o ciclo do fósforo não possui uma fase gasosa significativa. Seu principal reservatório são as rochas, e sua disponibilidade para os organismos vivos é limitada, o que pode ser um fator limitante para o crescimento de plantas em alguns ecossistemas
+    </p>
 
    <p>
-    Os grandes reservatórios de fósforo são minerais, ou seja, rochas e outros depósitos que foram se formando ao longo das eras geológicas. Por ação do <strong>Intemperismo</strong> &lpar;  processos químicos e físicos de desintegração, degradação ou decomposição de rochas &rpar;, o fósforo é liberado para o meio ambiente.
-   </p>
+    Os grandes reservatórios de fósforo são minerais, ou seja, rochas e outros depósitos que foram se formando ao longo das eras geológicas. Por ação do <strong>Intemperismo</strong> &lpar;  processos químicos e físicos de desintegração, degradação ou decomposição de rochas &rpar;, 
+    O intemperismo representa a porta de entrada do fósforo no ciclo biogeoquímico. Ao fragmentar as rochas e liberar os minerais, esse processo torna o fósforo disponível para ser absorvido pelas plantas, iniciando assim a cadeia alimentar. Sem o intemperismo, o fósforo permaneceria indisponível para os seres vivos, limitando a vida na Terra.
+    O intemperismo pode ser físico, químico ou biológico. O intemperismo físico fragmenta as rochas em partículas menores, enquanto o intemperismo químico altera a composição mineral das rochas. O intemperismo biológico, por sua vez, envolve a ação de organismos que secretam ácidos e quebram as rochas para obter nutrientes. Todos esses processos contribuem para a liberação do fósforo das rochas e sua incorporação nos ecossistemas.
+</p>
 
 
    <p>
-    No meio ambiente, então, ele é absorvido pelas plantas e chega a outros seres vivos por meio da <strong>Cadeia alimentar</strong> . Os seres vivos retornam o fósforo por meio de urina, fezes e também por sua decomposição após a morte. Os fertilizantes também atuam no ciclo do fósforo, pois são carregados para corpos d’água após sua utilização.
-
+    "No meio ambiente, o fósforo, absorvido pelas plantas através das raízes, inicia sua jornada pela cadeia alimentar. Ao serem consumidas por herbívoros, e estes por carnívoros, o fósforo é transferido de um organismo para outro. A decomposição de organismos mortos, seja de plantas ou animais, por bactérias e fungos, devolve o fósforo ao solo, completando o ciclo. A cadeia alimentar é o mecanismo pelo qual o fósforo circula entre os seres vivos. Após ser incorporado pelas plantas, ele passa para os herbívoros e, posteriormente, para os carnívoros. Quando esses organismos morrem, os decompositores, como bactérias e fungos, atuam decompondo a matéria orgânica e liberando o fósforo novamente para o solo, tornando-o disponível para novas plantas. Os fertilizantes, ao fornecerem fósforo adicional ao solo, podem acelerar esse ciclo, mas também podem causar problemas ambientais se utilizados de forma inadequada. As plantas absorvem o fósforo na forma de íons fosfato (PO₄³⁻). Esse íon é essencial para a formação de moléculas como o ATP, o DNA e os fosfolipídios, que compõem as membranas celulares. A fixação do fósforo pelas plantas é influenciada por diversos fatores, como o pH do solo, a presença de outros nutrientes e a atividade de microrganismos."
    </p>
 
   
@@ -29,6 +31,17 @@
         <div id="divIM">
             <img src="imagem/foto1.jpg" alt="">
         </div>
+
+         <ol>
+                <li>Início nas rochas:O fósforo é encontrado em grandes quantidades nas rochas. Através do intemperismo (processo de desgaste das rochas causado por agentes como a água e o vento), o fósforo é liberado para o solo.</li>
+             <br>   <li>Absorção pelas plantas: As plantas absorvem o fósforo presente no solo através de suas raízes. Esse elemento é fundamental para o crescimento e desenvolvimento das plantas.</li>
+             <br>    <li>Transferência para os animais: Os animais obtêm fósforo ao se alimentarem das plantas. O fósforo faz parte dos tecidos animais, como ossos e músculos.</li>
+             <br>    <li>Decomposição e retorno ao solo:Quando plantas e animais morrem ou excretam, organismos decompositores como fungos e bactérias decompõem a matéria orgânica, liberando o fósforo novamente para o solo.</li>
+             <br>    <li>Perda na drenagem: Parte do fósforo presente no solo pode ser carregada pela água da chuva para rios, lagos e oceanos.</li>
+             <br>   <li>Incorporação em rochas sedimentares: Nos ambientes aquáticos, o fósforo pode se depositar no fundo e ser incorporado a novas rochas sedimentares.</li>
+             <br>   <li>Elevação geológica e retorno ao ciclo: Ao longo de milhões de anos, processos geológicos podem elevar essas rochas sedimentares para a superfície terrestre, reiniciando o ciclo.</li>
+            </ol>
+
 
         <h1>Perguntas Frequentes</h1>
       <h2>   O que é o ciclo do fósforo?</h2>
