--- a/projetos/trabalho/tela-inicial.html
+++ b/projetos/trabalho/tela-inicial.html
@@ -44,6 +44,7 @@
 
 
         <h1>Perguntas Frequentes</h1>
+        <b> OBS:Perguntar para as pessoas</b>
       <h2>   O que é o ciclo do fósforo?</h2>
 <p>O ciclo do fósforo é o processo natural pelo qual o fósforo é reciclado e movido através do ambiente. Isso inclui a transferência de fósforo entre o solo, as plantas, os animais e os organismos decompositores.
 </p>
