--- a/projetos/trabalho/tela-inicial.html
+++ b/projetos/trabalho/tela-inicial.html
@@ -14,6 +14,9 @@
          Diferentemente de outros ciclos biogeoquímicos, como o do carbono e do nitrogênio, o ciclo do fósforo não possui uma fase gasosa significativa. Seu principal reservatório são as rochas, e sua disponibilidade para os organismos vivos é limitada, o que pode ser um fator limitante para o crescimento de plantas em alguns ecossistemas
     </p>
 
+
+
+   
    <p>
     Os grandes reservatórios de fósforo são minerais, ou seja, rochas e outros depósitos que foram se formando ao longo das eras geológicas. Por ação do <strong>Intemperismo</strong> &lpar;  processos químicos e físicos de desintegração, degradação ou decomposição de rochas &rpar;, 
     O intemperismo representa a porta de entrada do fósforo no ciclo biogeoquímico. Ao fragmentar as rochas e liberar os minerais, esse processo torna o fósforo disponível para ser absorvido pelas plantas, iniciando assim a cadeia alimentar. Sem o intemperismo, o fósforo permaneceria indisponível para os seres vivos, limitando a vida na Terra.
@@ -25,10 +28,13 @@
     "No meio ambiente, o fósforo, absorvido pelas plantas através das raízes, inicia sua jornada pela cadeia alimentar. Ao serem consumidas por herbívoros, e estes por carnívoros, o fósforo é transferido de um organismo para outro. A decomposição de organismos mortos, seja de plantas ou animais, por bactérias e fungos, devolve o fósforo ao solo, completando o ciclo. A cadeia alimentar é o mecanismo pelo qual o fósforo circula entre os seres vivos. Após ser incorporado pelas plantas, ele passa para os herbívoros e, posteriormente, para os carnívoros. Quando esses organismos morrem, os decompositores, como bactérias e fungos, atuam decompondo a matéria orgânica e liberando o fósforo novamente para o solo, tornando-o disponível para novas plantas. Os fertilizantes, ao fornecerem fósforo adicional ao solo, podem acelerar esse ciclo, mas também podem causar problemas ambientais se utilizados de forma inadequada. As plantas absorvem o fósforo na forma de íons fosfato (PO₄³⁻). Esse íon é essencial para a formação de moléculas como o ATP, o DNA e os fosfolipídios, que compõem as membranas celulares. A fixação do fósforo pelas plantas é influenciada por diversos fatores, como o pH do solo, a presença de outros nutrientes e a atividade de microrganismos."
    </p>
 
-  
+  <h2> O ciclo do fósforo ocorre em duas escalas de tempo: </h2>
+<p>Ciclo de Tempo Ecológico: A reciclagem rápida de átomos de fósforo entre solo, plantas, animais e decompositores </p>
+<p>Ciclo de Tempo Geológico: A sedimentação e incorporação do fósforo nas rochas sedimentares, ocorrendo ao longo de períodos extensos.
+</p>
 
 
-        <div id="divIM">
+        <div class="divIM">
             <img src="imagem/foto1.jpg" alt="">
         </div>
 
@@ -63,11 +69,19 @@
 <h2>Como os humanos afetam o ciclo do fósforo? </h2>
 <p>Atividades humanas, como a mineração de fosfatos para fertilizantes e o descarte de resíduos orgânicos, podem alterar o ciclo natural do fósforo. O uso excessivo de fertilizantes pode levar ao acúmulo de fósforo em corpos d'água, causando eutrofização e problemas como o crescimento excessivo de algas.
 </p>
+
+<h2>O que são íons? </h2>
+<p>Os íons são espécies químicas que possuem carga elétrica e são formados por átomos neutros ao receberem ou perderem seus elétrons. O NaCl &lpar; fórmula química do cloreto de sódio &rpar; é um composto iônico formado pelo íon positivo sódio e pelo íon negativo cloro.
+</p>
+
 <h2>O que é eutrofização? </h2>
-<p>Eutrofização é o processo pelo qual um corpo d'água se enche excessivamente de nutrientes, como o fósforo,
+<p>Eutrofização é um processo natural ou acelerado pela ação humana que ocorre em corpos d'água, como lagos, rios e represas. Ela se caracteriza pelo acúmulo excessivo de nutrientes, principalmente nitrogênio e fósforo, que levam a um crescimento explosivo de algas e plantas aquáticas.
 </p>
 
 
+<div class="divIM">
+    <img src="imagem/ambiente-eutrofizado.webp" alt="">
+</div>
 
     </main>
 </body>
