--- a/projetos/tela-copia.html
+++ b/projetos/tela-copia.html
@@ -82,7 +82,7 @@
  
 <span>
 <div>  <a href="starbucks/starbucks.html">Starbucks <br>
-  <a href="starbucks/starbucks.html"> <img src="z-imagem/sprouGigs.png" alt=""></a></a>    
+  <a href="starbucks/starbucks.html"> <img src="z-imagem/starbuncks.png" alt=""></a></a>    
 </div>
 
 
@@ -180,10 +180,17 @@
 <span>
 
     <div>
-  
         <a href="livraria-page/tela-inicial.html">Livraria <br>
          <img src="z-imagem/get logo circuo.png" alt=""></a>  
-         </div>
+    </div>
+
+    <div>
+        <a href="avaliar-me/tela-inicial.html">Avaliar-me <br>
+        <img src="z-imagem/avaliaçao.png" alt=""></a>
+    </div>
+
+
+        
         
 </span>
 
