--- a/projetos/filmes-main/filme_comedia/filmes-comedia.html
+++ b/projetos/filmes-main/filme_comedia/filmes-comedia.html
@@ -8,6 +8,7 @@
 </head>
 <body>
        <h1>Comedia</h1>
+       <a href="todo-no proximo natal.html"><img src="fotos/tudo bem no natal que vem.jpg" alt=""></a>
     <a href="todo-mundo-em-panico.1html"><img src="fotos/foto-todo-mundo-em-panico1.jpg" alt=""></a>
     <a href="todo-mundo-em-panico2.html"><img src="fotos/foto-todo-mundo-em-panico2.webp" alt=""></a>
     <a href="todo-mundo-em-panico3.html"><img src="fotos/foto-todo-mundo-em-panico3.jpg" alt=""></a>
