--- a/projetos/QUIZ'S/QUIZ.html
+++ b/projetos/QUIZ'S/QUIZ.html
@@ -17,5 +17,8 @@
     <br>
     <h2>Quiz-Series</h2>
     <a href="quiz-series/series-quiz.html"><img src="fotos/diarios de um vampiro.jpg" alt=""></a>
+
+
+    <a href="quiz-fosforo/fosforo.html">fosfoto</a>
 </body>
 </html>
