--- a/projetos/filmes-main/filme_comedia/o-maskara.html
+++ b/projetos/filmes-main/filme_comedia/o-maskara.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style-comedia.css">
 </head>
 <body>
     <iframe src="https://www.tokyvideo.com/embed/321287" frameborder="0" width="640" height="360" scrolling="no" allowfullscreen webkitallowfullscreen mozallowfullscreen allowtransparency style="display:block;max-width:100%;margin:0 auto 10px"></iframe>
+    <div>
+        <div onclick="e1()" id="estrela1" class="estrela"></div>
+        <div onclick="e2()" id="estrela2"  class="estrela"></div>
+        <div onclick="e3()" id="estrela3"  class="estrela"></div>
+        <div onclick="e4()" id="estrela4"  class="estrela"></div>
+        <div onclick="e5()" id="estrela5"  class="estrela"></div>
+       </div>  
+    <script src="zz.js"></script>
 </body>
 </html>
