--- a/projetos/filmes-main/ao vivo/chaves.html
+++ b/projetos/filmes-main/ao vivo/chaves.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe src="https://player.twitch.tv/?channel=tosembolo&parent=deriky2019.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="500px" width="100%"></iframe>
+    <iframe src="https://player.twitch.tv/?channel=tosembolo&parent=deriky2019.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="490px" width="100%"></iframe>
+    <h2>O que Esta Achando da serie</h2> 
+    <div>
+            <div onclick="e1()" id="estrela1" class="estrela"></div>
+            <div onclick="e2()" id="estrela2"  class="estrela"></div>
+            <div onclick="e3()" id="estrela3"  class="estrela"></div>
+            <div onclick="e4()" id="estrela4"  class="estrela"></div>
+            <div onclick="e5()" id="estrela5"  class="estrela"></div>
+           
+    </div>
+    <p id="p">Me Avalie</p>
+    <script src="ao vivo.js"></script>
 </body>
 </html>
