--- a/projetos/filmes-main/ao vivo/eu patroa e crian.html
+++ b/projetos/filmes-main/ao vivo/eu patroa e crian.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <iframe src="https://player.twitch.tv/?channel=euapatroaetv&parent=deriky2019.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="500px" width="100%"></iframe>
+    <div>
+        <div onclick="e1()" id="estrela1" class="estrela"></div>
+        <div onclick="e2()" id="estrela2"  class="estrela"></div>
+        <div onclick="e3()" id="estrela3"  class="estrela"></div>
+        <div onclick="e4()" id="estrela4"  class="estrela"></div>
+        <div onclick="e5()" id="estrela5"  class="estrela"></div>
+       
+</div>
+<p id="p">Me Avalie</p>
+<script src="ao vivo.js"></script>
 </body>
 </html>
