--- a/projetos/filmes-main/filme_comedia/dennis-o-pimentinha.html
+++ b/projetos/filmes-main/filme_comedia/dennis-o-pimentinha.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style-comedia.css">
 </head>
 <body>
     <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x8l4hyx?autoplay=1" width="100%" height="100%" allowfullscreen title="Dailymotion Video Player" allow="autoplay"> </iframe> </div>
+    <div>
+        <div onclick="e1()" id="estrela1" class="estrela"></div>
+        <div onclick="e2()" id="estrela2"  class="estrela"></div>
+        <div onclick="e3()" id="estrela3"  class="estrela"></div>
+        <div onclick="e4()" id="estrela4"  class="estrela"></div>
+        <div onclick="e5()" id="estrela5"  class="estrela"></div>
+       </div>  
+    <script src="zz.js"></script>
 </body>
 </html>
