--- a/projetos/trabalho/tela-inicial.html
+++ b/projetos/trabalho/tela-inicial.html
@@ -10,7 +10,10 @@
     <main>
         <h1>Ciclo do fósforo</h1>
    <p>
-         O fósforo possui um ciclo <strong>Biogeoquímico</strong> , de extrema importância para a manutenção da vida no planeta. Os compostos de fósforo, como citado, são diversos e estão presentes por conta de diversas moléculas essenciais.
+         O fósforo possui um ciclo <strong>Biogeoquímico</strong>Ciclos biogeoquímicos são processos naturais que envolvem a circulação de elementos químicos essenciais para a vida (como carbono, nitrogênio, oxigênio, fósforo e enxofre) entre os componentes bióticos (seres vivos) e abióticos (ar, água, solo) da Terra.
+
+
+        <br> O Ciclo do Fósforo é de extrema importância para a manutenção da vida no planeta. Os compostos de fósforo, como citado, são diversos e estão presentes por conta de diversas moléculas essenciais.
          Diferentemente de outros ciclos biogeoquímicos, como o do carbono e do nitrogênio, o ciclo do fósforo não possui uma fase gasosa significativa. Seu principal reservatório são as rochas, e sua disponibilidade para os organismos vivos é limitada, o que pode ser um fator limitante para o crescimento de plantas em alguns ecossistemas
     </p>
 
