Atualizar o QUIZ.html

--- a/projetos/QUIZ'S/QUIZ.html
+++ b/projetos/QUIZ'S/QUIZ.html
@@ -20,5 +20,9 @@
 
 
     <a href="quiz-fosforo/fosforo.html">fosfoto</a>
+
+<h2>Quiz-Escolar</h2>
+<a href="quiz-escolar.html">Acessar Quiz Escolar</a>
+<br>
 </body>
 </html>
