Atualizar o QUIZ.html

--- a/projetos/QUIZ'S/QUIZ.html
+++ b/projetos/QUIZ'S/QUIZ.html
@@ -22,7 +22,7 @@
     <a href="quiz-fosforo/fosforo.html">fosfoto</a>
 
 <h2>Quiz-Escolar</h2>
-<a href="quiz-extra.html">Acessar Quiz Escolar</a>
+<a href="quiz_extra.html">Acessar Quiz Escolar</a>
 <br>
 </body>
 </html>
