Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -25,8 +25,8 @@
     </span> 
 
     <span id="p2" class="sumir"> 
-        <p>2:Qual desses itens é necessário para criar uma poção de cura?</p> 
-        <p class="per" onclick="certo2()" >a&rpar; Maçã dourada</p>  
+        <p>2:O que significa “renda líquida”? </p> 
+        <p class="per" onclick="certo2()" >a&rpar; O valor que sobra após os descontos no salário </p>  
 
         <p class="per" onclick="errado()">b&rpar; Olho de aranha</p> <br> 
 
