Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -28,23 +28,23 @@
         <p>2:O que significa “renda líquida”? </p> 
         <p class="per" onclick="certo2()" >a&rpar; O valor que sobra após os descontos no salário </p>  
 
-        <p class="per" onclick="errado()">b&rpar; Olho de aranha</p> <br> 
+        <p class="per" onclick="errado()">b&rpar;O valor total antes dos descontos </p> <br> 
 
-        <p class="per" onclick="errado()" >c&rpar; Pó de blaze</p>  
+        <p class="per" onclick="errado()" >c&rpar; O valor gasto com lazer e alimentação</p>  
 
-        <p class="per" onclick="errado()">d&rpar; Pó de redstone</p> 
+        <p class="per" onclick="errado()">d&rpar; O valor que se investe em ações</p> 
     </span> 
 
 
     <span id="p3"  class="sumir"> 
-        <p>3:Qual destas ferramentas é mais eficaz para minerar diamantes?</p> 
-        <p class="per" onclick="errado()" >a&rpar; Picareta de madeira</p> 
+        <p>3:Qual é um exemplo de custo fixo? </p> 
+        <p class="per" onclick="errado()" >a&rpar; Compra de roupas</p> 
 
-        <p class="per" onclick="errado()">b&rpar; Picareta de pedra</p> <br> 
+        <p class="per" onclick="errado()">b&rpar;Mensalidade escolar</p> <br> 
 
-        <p class="per" onclick="errado()" >c&rpar;Picareta de ouro</p>   
+        <p class="per" onclick="errado()" >c&rpar;Alimentação em restaurante</p>   
 
-        <p class="per" onclick="certo3()">d&rpar;Picareta de ferro</p> 
+        <p class="per" onclick="certo3()">d&rpar;Conta de luz</p> 
     </span> 
 
 
