Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -52,15 +52,15 @@
 
 
     <span id="p4" class="sumir"> 
-       <p> O que é necessário para domesticar um lobo no Minecraft?</p>  
+       <p>O que são juros compostos? </p>  
 
-        <p class="per" onclick="errado()" >a&rpar; Peixe cru</p>    
+        <p class="per" onclick="errado()" >a&rpar; Juros que não variam com o tempo</p>    
 
-        <p class="per" onclick="certo4()">b&rpar; Osso</p> <br> 
+        <p class="per" onclick="certo4()">b&rpar;Juros calculados sobre o valor inicial e os juros acumulados  </p> <br> 
 
-        <p class="per" onclick="errado()" >c&rpar; Semente de melancia</p>  
+        <p class="per" onclick="errado()" >c&rpar; Juros calculados apenas sobre o valor inicial</p>  
 
-        <p class="per" onclick="errado()">d&rpar; Semente de trigo</p> 
+        <p class="per" onclick="errado()">d&rpar;Juros cobrados apenas uma vez</p> 
     </span> 
 
 
@@ -163,29 +163,7 @@
 <script src="JS.js"></script> 
 
 
-2. O que significa “renda líquida”? 
-A) O valor total antes dos descontos 
-B) O valor gasto com lazer e alimentação 
-C) O valor que se investe em ações 
-D) O valor que sobra após os descontos no salário 
 
-✅ Resposta correta: D 
-
-3. Qual é um exemplo de custo fixo? 
-A) Conta de luz 
-B) Compra de roupas 
-C) Mensalidade escolar 
-D) Alimentação em restaurante 
-
-✅ Resposta correta: C 
-
-4. O que são juros compostos? 
-A) Juros que não variam com o tempo 
-B) Juros cobrados apenas uma vez 
-C) Juros calculados apenas sobre o valor inicial 
-D) Juros calculados sobre o valor inicial e os juros acumulados 
-
-✅ Resposta correta: D 
 
 5. O que é inflação? 
 A) Aumento do valor do salário 
