Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="fin.css"> 
 </head> 
 <body> 
+<div<img src=""
+ <h1>quiz financeiro</h1> 
+
+<\div>
     <h1>quiz financeiro</h1> 
  <h2>pontuaçao <span id="pontuaçao">0</span></h2>   
 
