--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="fin.css"> 
 </head> 
 <body> 
-<div<img src=""
+<div<img src="logo.png"
  <h1>quiz financeiro</h1> 
 
 <\div>
