--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Quiz Minecreft</title> 
-        <link rel="stylesheet" href="kem.css"> 
+        <link rel="stylesheet" href="fin.css"> 
 </head> 
 <body> 
 
