Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -9,7 +9,7 @@
 <body> 
 
  <div id="divlogo">
-    <img id="logo" src="OIP (1).jfif" alt="">
+    <img id="logo" src="logo.png" alt="">
  <h1>Quiz Financeiro</h1> 
 </div>
 
