Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -180,5 +180,5 @@
     <p>Proxima pergunta <img class="icon" src="arrow-right.svg" alt=""></p>
 </div>
 
-<script src="js.js"></script> 
+<script src="JS.js"></script> 
 
