Atualizar o quiz-escolar.html

--- a/projetos/QUIZ'S/quiz-escolar.html
+++ b/projetos/QUIZ'S/quiz-escolar.html
@@ -176,9 +176,60 @@
 
 <p id="r1">Um orçamento pessoal é um planejamento financeiro que ajuda a controlar suas receitas e despesas. Ele permite organizar o quanto você ganha e gasta em diferentes categorias (fixas e variáveis), com o objetivo de equilibrar suas finanças, poupar e alcançar metas financeiras. É útil para evitar surpresas, reduzir dívidas e garantir segurança financeira no futuro. </p>
 
+
+<p id="r2">
+    Renda líquida é o valor que você realmente recebe após descontos, impostos e outras deduções. É diferente da renda bruta, que é o valor total antes dos descontos. Em resumo, é o dinheiro que cai na sua conta!
+</p>
+
+
+<p id="r3">
+    Custo fixo é um gasto que não muda com a produção ou vendas, como aluguel, salários e internet. Ele ocorre regularmente, independentemente do volume de negócios.
+</p>
+
+
+
+
+<p id="r4">
+    Juros compostos são juros calculados sobre o valor inicial mais os juros acumulados ao longo do tempo. Isso faz o montante crescer mais rápido do que com juros simples. É muito usado em investimentos e empréstimos!
+</p>
+
+
+
+<p id="r5">
+    Crie um fundo de emergência guardando dinheiro regularmente, escolhendo um investimento seguro e usando apenas para imprevistos. O ideal é ter de 3 a 6 meses de despesas reservados.
+</p>
+
+
+<p id="r6">
+    O score de crédito é uma pontuação que indica sua credibilidade financeira. Ele varia conforme seu histórico de pagamentos, dívidas e relacionamento com instituições financeiras. Quanto maior o score, mais fácil conseguir crédito com boas condições!
+</p>
+
+
+<p id="r7">
+    Investir é importante porque o dinheiro parado perde valor com a inflação. Aplicando em investimentos, ele pode crescer e gerar renda ao longo do tempo. Além disso, investir ajuda a alcançar objetivos financeiros, como aposentadoria e compra de bens, garantindo mais segurança no futuro!
+</p>
+
+
+<p id="r8">
+
+</p>
+
+
+<p id="r9">
+
+</p>
+
+
+
+
+
+
+
+
+
 <div id="proxima">
     <p>Proxima pergunta <img class="icon" src="arrow-right.svg" alt=""></p>
 </div>
 
 <script src="JS.js"></script> 
-
+
