Atualizar o tela-copia.html

--- a/projetos/tela-copia.html
+++ b/projetos/tela-copia.html
@@ -210,7 +210,7 @@
 
 <a href="lista de skill/lista-de-skill.html">Lista de Sikll</a> <br>
 
-<a href="loja do real/tela-inicial.html">Loja do Real</a> <br>
+<a href="ms.html">Loja do Real</a> <br>
 
 
 
