Atualizar o ms.html

--- a/projetos/ms.html
+++ b/projetos/ms.html
@@ -15,9 +15,9 @@
     </header>
 	
      <nav>
-         <div>Lojas</div>
-         <div>Sobre</div>
-         <div>Contato</div>
+         <p>Lojas</p>
+         <p>Sobre</p>
+         <p>Contato</p>
      
      </nav>
 	
