--- a/projetos/ms.html
+++ b/projetos/ms.html
@@ -10,7 +10,7 @@
 <body id="fundo">
     <header>
         <div id="logo">
-            <img src="ms.png" alt="">
+            <img src="logoms.png" alt="">
         </div>
     </header>
 	
